# third_parities

./: README.md
eigen_catkin/: CMakeLists.txt
gflags_catkin/: CMakeLists.txt
glog_catkin/: CMakeLists.txt
gtsam_catkin/: CMakeLists.txt
metis_catkin/: .gitignore  CMakeLists.txt  README.md  gcc.cmake  package.xml
mincurves/: CMakeLists.txt  package.xml
mincurves/include/mincurves/: DiscreteSE3Curve.hpp  LocalSupport2CoefficientManager-inl.hpp
mincurves/src/: DiscreteSE3Curve.cpp  KeyGenerator.cpp  SE3Curve.cpp
minkindr_conversions/include/minkindr_conversions/: kindr_msg.h  kindr_tf.h  kindr_xml.h
minkindr_conversions/test/: kindr_msg_test.cc  kindr_tf_test.cc  testing_predicates.h
minkindr_gtsam/: CMakeLists.txt
minkindr_gtsam/include/kindr/minimal/: quat-transformation-gtsam.h  rotation-quaternion-gtsam.h
minkindr_gtsam/test/: test_minkindr-gtsam.cc
opencv3_catkin/: CMakeLists.txt
pcl_catkin/: CMakeLists.txt
third_parties_archives/: eigen-3.3.4.tar.bz2
