<package>
  <name>metis_catkin</name>
  <version>5.1.0</version>
  <description>metis graph partitioning</description>
  <maintainer email="slynen@ethz.ch">Simon Lynen</maintainer>

  <license>See package</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
</package>
