<?xml version="1.0"?>
<package format="2">
  <name>mincurves</name>
  <version>0.0.1</version>
  <description>mincurves</description>

  <maintainer email="abel.Gawel@mavt.ethz.ch">Abel Gawel</maintainer>
  <maintainer email="rdube@ethz.ch">Renaud Dubé</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <!-- <depend>doxygen_catkin</depend> -->
  <depend>eigen_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>gtsam_catkin</depend>
  <depend>minkindr_gtsam</depend>
</package>

